# P4-3

./: MaxProfitCalculator.py  README.md  bitdeer stocks processed.csv  bitdeer stocks.csv  chloetry.py  data.py  eightco stocks (1).csv  eightco stocks processed.csv  eightco stocks.csv  i think this is cleaning.  idk? cleaning??  indicator.py  main.py  nasdaq_screener_1757427876291.csv  pyproject.toml  ref.py  rigetti processed.csv  rigetti.csv  streak.py  testing.py
data/: bitdeer.csv  eightco.csv  rigetti.csv
src/: indicator.py  streaks.py
tests/: test_max_profit.py  test_sma.py  test_streak.py
